effect/offscreeneffect: guard against allocating zero-size textures

This also fixes a potential crash during a GPU reset (when allocating the texture
fails)

BUG: 485884


(cherry picked from commit 91c2389a78fdd56b69537092bc5ddac2e11ad03c)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>